--- a/public/acs-html/assets/scss/styles.scss
+++ b/public/acs-html/assets/scss/styles.scss
@@ -38,14 +38,16 @@ body {
     16px/1.7 Arial,
     Helvetica,
     sans-serif;
+  box-sizing: border-box;
 }
 p {
-  margin-bottom: 0;
+  margin: 0 0 10px;
 }
 a {
   text-decoration: none;
   color: white;
   font-weight: bold;
+  color: #1b4a1c;
 }
 
 .headline {
@@ -146,6 +148,358 @@ section {
   background-color: #f0efef;
 }
 
+.breadcum {
+  background: #ebf2ff;
+  ::before {
+    display: table;
+    content: " ";
+  }
+  .navigation {
+    padding: 10px 0;
+    font-weight: 700;
+    overflow: hidden;
+    li {
+      display: inline-block;
+      a {
+        display: block;
+        color: #444;
+        font-size: 0.9em;
+        padding-right: 10px;
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+      }
+    }
+  }
+}
+
+#content {
+  min-height: 300px;
+  .tt {
+    line-height: 38px;
+    color: #009a4f;
+    text-transform: uppercase;
+    margin-bottom: 1px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 22px;
+    position: relative;
+    margin: 15px 0;
+    &::before {
+      position: absolute;
+      content: "";
+      width: 20%;
+      left: 0;
+      bottom: 0;
+      background: #000;
+      height: 2px;
+    }
+    &::after {
+      position: absolute;
+      content: "";
+      width: 79%;
+      left: 21%;
+      bottom: 0;
+      background: #009a4f;
+      height: 2px;
+    }
+  }
+  .cnt {
+    margin-bottom: 20px;
+    padding-top: 20px;
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+      line-height: 30px;
+      font-weight: 700;
+      color: #000;
+    }
+    h2 {
+      font-size: 24px;
+      margin-bottom: 10px;
+      line-height: 26px;
+    }
+    img {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+    ul > li {
+      list-style-type: initial;
+    }
+    .single_content {
+      figure {
+        width: 800px;
+        margin: 0 auto;
+      }
+      .wp-caption.aligncenter {
+        text-align: center;
+        clear: both;
+        max-width: 100%;
+        display: block;
+        overflow: hidden;
+      }
+      #toc_container {
+        margin: 0 auto;
+        border: 1px solid #aaa;
+        padding: 10px;
+        margin-bottom: 1em;
+        width: auto;
+        display: table;
+        font-size: 95%;
+        background: #edf6ff;
+        .toc_title {
+          text-align: center;
+          font-weight: 700;
+          margin: 0;
+          padding: 0;
+        }
+        .toc_list {
+          margin-top: 1em;
+          li {
+            font-size: 110%;
+            list-style: none;
+            a {
+              text-decoration: none;
+              text-shadow: none;
+              color: #1b4a1c;
+              &:hover {
+                text-decoration: underline;
+                color: #2a6496;
+                outline: 0;
+              }
+            }
+          }
+        }
+      }
+      .author {
+        .saboxplugin-wrap {
+          margin-top: 0px;
+          margin-bottom: 0px;
+          padding: 0px 0px;
+          border: 1px solid #eee;
+          width: 100%;
+          clear: both;
+          display: block;
+          overflow: hidden;
+          word-wrap: break-word;
+          position: relative;
+          .saboxplugin-authorname {
+            font-size: 18px;
+            line-height: 25px;
+          }
+          .saboxplugin-gravatar {
+            float: left;
+            padding: 20px;
+            img {
+              max-width: 100px;
+              height: auto;
+              border-radius: 50%;
+            }
+          }
+          .saboxplugin-authorname {
+            font-size: 18px;
+            line-height: 25px;
+            margin: 20px 0 0 20px;
+            display: block;
+          }
+          .saboxplugin-desc {
+            font-size: 14px !important;
+            line-height: 21px !important;
+            h4 {
+              font-size: 1em;
+            }
+          }
+          .saboxplugin-socials {
+            position: relative;
+            display: block;
+            background: #fcfcfc;
+            padding: 10px;
+            border-top: 1px solid #eee;
+            line-height: 1 !important;
+            svg {
+              width: 18px;
+              height: 18px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .comment_form {
+    h3 {
+      font-size: 1em;
+    }
+    .readmore {
+      background: #1b4a1c;
+      color: #fff;
+      width: 125px;
+      text-align: center;
+      padding: 7px;
+      margin: 20px auto 0;
+      font-family: "Roboto Condensed";
+      text-transform: uppercase;
+      font-size: 14px;
+      display: block;
+      font-weight: 700;
+      border: 1px solid transparent;
+      &:hover {
+        color: yellow;
+        border: 1px solid #000;
+        background: #009a4f;
+      }
+    }
+  }
+  .form_tuvan {
+    background: #078844;
+    font-weight: 700;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    .form_tuvan_content {
+      p {
+        color: #ff0;
+      }
+      textarea.form-control {
+        height: 80px;
+      }
+    }
+  }
+  .img_sidebar {
+    margin-top: 15px;
+  }
+  .item-news {
+    overflow: hidden;
+    margin: 10px 0;
+    h3 a {
+      font-size: 12px;
+      color: #000;
+    }
+  }
+}
+.btn {
+  color: #fff;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+.read-more {
+  font-size: 15px;
+  a,
+  button {
+    width: 220px;
+    color: white;
+    background: #1b4a1c;
+    display: block;
+    padding: 10px;
+    text-transform: uppercase;
+    font-family: "Roboto Condensed";
+    &:hover {
+      color: yellow;
+      outline: 0;
+      text-decoration: underline;
+    }
+  }
+}
+.item {
+  border: 1px solid #ddd;
+  word-wrap: break-word;
+  list-style: none;
+  .img {
+    position: relative;
+    overflow: hidden;
+    .link {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: rgba(0, 128, 0, 0.8);
+      overflow: hidden;
+      opacity: 0;
+      -webkit-transition: all 0.4s ease;
+      -moz-transition: all 0.4s ease;
+      -ms-transition: all 0.4s ease;
+      transition: all 0.4s ease;
+      i {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 50px;
+        height: 50px;
+        line-height: 46px;
+        font-size: 1.3em;
+        border: 2px solid #fff;
+        color: #fff;
+        text-align: center;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        border-radius: 50%;
+        -webkit-transform: translate(-50%, -50%) rotate(270deg);
+        -moz-transform: translate(-50%, -50%) rotate(270deg);
+        -ms-transform: translate(-50%, -50%) rotate(270deg);
+        transform: translate(-50%, -50%) rotate(270deg);
+        -webkit-transition: all 0.4s ease;
+        -moz-transition: all 0.4s ease;
+        -ms-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+      }
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      -webkit-transition: 0.3s ease-in-out;
+      transition: 0.3s ease-in-out;
+    }
+    &:hover {
+      img {
+        -webkit-transform: scale(1.3);
+        transform: scale(1.3);
+      }
+      .link {
+        opacity: 1;
+        i {
+          -webkit-transform: translate(-50%, -50%) rotate(0);
+          -moz-transform: translate(-50%, -50%) rotate(0);
+          -ms-transform: translate(-50%, -50%) rotate(0);
+          transform: translate(-50%, -50%) rotate(0);
+        }
+      }
+    }
+  }
+  .card-body {
+    padding: 10px;
+    .title-card {
+      font-size: 18px;
+      display: block;
+      text-align: left;
+      text-transform: uppercase;
+      padding: 10px 0 15px;
+      text-align: center;
+      height: 52px;
+      overflow: hidden;
+      color: #114831;
+      &:hover {
+        color: #1f4286;
+        text-decoration: underline;
+      }
+    }
+    .note-card {
+      text-align: justify;
+      overflow: hidden;
+    }
+  }
+  @media (min-width: 1023px) {
+    .img {
+      overflow: hidden;
+      height: 185px;
+    }
+  }
+}
 #cong-trinh-tieu-bieu,
 #xay-dung-nha,
 #sua-chua-nha,
@@ -186,83 +540,6 @@ section {
     }
   }
   .single-project {
-    .item {
-      border: 1px solid #ddd;
-      word-wrap: break-word;
-      list-style: none;
-      .img {
-        position: relative;
-        overflow: hidden;
-        .link {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          background-color: rgba(0, 128, 0, 0.8);
-          overflow: hidden;
-          opacity: 0;
-          -webkit-transition: all 0.4s ease;
-          -moz-transition: all 0.4s ease;
-          -ms-transition: all 0.4s ease;
-          transition: all 0.4s ease;
-          i {
-            display: block;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 50px;
-            height: 50px;
-            line-height: 46px;
-            font-size: 1.3em;
-            border: 2px solid #fff;
-            color: #fff;
-            text-align: center;
-            -webkit-border-radius: 50%;
-            -moz-border-radius: 50%;
-            -ms-border-radius: 50%;
-            border-radius: 50%;
-            -webkit-transform: translate(-50%, -50%) rotate(270deg);
-            -moz-transform: translate(-50%, -50%) rotate(270deg);
-            -ms-transform: translate(-50%, -50%) rotate(270deg);
-            transform: translate(-50%, -50%) rotate(270deg);
-            -webkit-transition: all 0.4s ease;
-            -moz-transition: all 0.4s ease;
-            -ms-transition: all 0.4s ease;
-            transition: all 0.4s ease;
-          }
-        }
-        img {
-          max-width: 100%;
-          height: auto;
-          -webkit-transform: scale(1);
-          transform: scale(1);
-          -webkit-transition: 0.3s ease-in-out;
-          transition: 0.3s ease-in-out;
-        }
-        &:hover {
-          img {
-            -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-          }
-          .link {
-            opacity: 1;
-            i {
-              -webkit-transform: translate(-50%, -50%) rotate(0);
-              -moz-transform: translate(-50%, -50%) rotate(0);
-              -ms-transform: translate(-50%, -50%) rotate(0);
-              transform: translate(-50%, -50%) rotate(0);
-            }
-          }
-        }
-      }
-      @media (min-width: 1023px) {
-        .img {
-          overflow: hidden;
-          height: 185px;
-        }
-      }
-    }
     .video-view {
       position: relative;
       cursor: pointer;
@@ -283,48 +560,8 @@ section {
         background-size: 100% 100%;
       }
     }
+  }
 
-    .card-body {
-      padding: 10px;
-      .title-card {
-        font-size: 18px;
-        display: block;
-        text-align: left;
-        text-transform: uppercase;
-        padding: 10px 0 15px;
-        text-align: center;
-        height: 52px;
-        overflow: hidden;
-        color: #114831;
-        &:hover {
-          color: #1f4286;
-          text-decoration: underline;
-        }
-      }
-      .note-card {
-        text-align: justify;
-        overflow: hidden;
-      }
-    }
-  }
-  .read-more {
-    font-size: 15px;
-    a,
-    button {
-      width: 220px;
-      color: white;
-      background: #1b4a1c;
-      display: block;
-      padding: 10px;
-      text-transform: uppercase;
-      font-family: "Roboto Condensed";
-      &:hover {
-        color: yellow;
-        outline: 0;
-        text-decoration: underline;
-      }
-    }
-  }
   .content {
     font-family: "Roboto Condensed";
     .nav-tabs {
@@ -385,6 +622,9 @@ section {
   background-color: #1b4a1c;
   margin-top: 0;
   overflow: hidden;
+  span {
+    color: white;
+  }
   .ct-footer {
     .title_footer {
       font-size: 22px;
@@ -400,6 +640,10 @@ section {
         border: 1px solid white;
         padding: 5px;
         margin-bottom: 10px;
+        color: white;
+        a {
+          color: white;
+        }
       }
     }
     .code-schema-events {
