--- a/public/acs-html/assets/css/styles.css
+++ b/public/acs-html/assets/css/styles.css
@@ -24,7 +24,8 @@ body {
   font-weight: 400;
   line-height: 22px;
   font-family: "Roboto", Condensed;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font: 16px/1.7 Arial, Helvetica, sans-serif; }
 
 p {
   margin: 0 0 10px; }
@@ -35,11 +36,40 @@ a {
   font-weight: bold;
   color: #1b4a1c; }
 
+h1,
+h2,
+h3,
+h4 {
+  font-size: 1em;
+  line-height: 1.32em;
+  margin: 0; }
+
+.wp30 {
+  float: left;
+  width: 30%; }
+
+.wp70 {
+  float: left;
+  width: 70%; }
+
+.news-list .item_news {
+  overflow: hidden;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc; }
+  .news-list .item_news .descr h3 {
+    text-transform: uppercase;
+    margin-bottom: 8px; }
+
 .headline {
   margin-top: 5rem; }
 
 .d-none-dk {
   display: none; }
+
+.phantrang {
+  text-align: center;
+  margin: 20px 0; }
 
 header {
   background-color: rgba(255, 255, 255, 0.95);
@@ -88,6 +118,11 @@ header {
     header #navbarNav .nav-main .dropdown-menu {
       box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
       border: none; }
+
+#content-anh .item {
+  margin-bottom: 30px;
+  border: 1px solid #ddd;
+  padding: 10px; }
 
 #slider-main .carousel-control-next-icon,
 #slider-main .carousel-control-prev-icon {
