--- a/public/acs-html/assets/scss/styles.scss
+++ b/public/acs-html/assets/scss/styles.scss
@@ -35,6 +35,10 @@ body {
   line-height: 22px;
   font-family: "Roboto", Condensed;
   box-sizing: border-box;
+  font:
+    16px/1.7 Arial,
+    Helvetica,
+    sans-serif;
 }
 p {
   margin: 0 0 10px;
@@ -45,7 +49,34 @@ a {
   font-weight: bold;
   color: #1b4a1c;
 }
-
+h1,
+h2,
+h3,
+h4 {
+  font-size: 1em;
+  line-height: 1.32em;
+  margin: 0;
+}
+.wp30 {
+  float: left;
+  width: 30%;
+}
+.wp70 {
+  float: left;
+  width: 70%;
+}
+.news-list .item_news {
+  overflow: hidden;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+  .descr {
+    h3 {
+      text-transform: uppercase;
+      margin-bottom: 8px;
+    }
+  }
+}
 .headline {
   margin-top: 5rem;
 }
@@ -53,6 +84,10 @@ a {
   display: none;
 }
 
+.phantrang {
+  text-align: center;
+  margin: 20px 0;
+}
 header {
   background-color: rgba(255, 255, 255, 0.95);
   box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.08);
@@ -115,6 +150,14 @@ header {
         border: none;
       }
     }
+  }
+}
+
+#content-anh {
+  .item {
+    margin-bottom: 30px;
+    border: 1px solid #ddd;
+    padding: 10px;
   }
 }
 
