--- a/public/acs-html/assets/css/styles.css
+++ b/public/acs-html/assets/css/styles.css
@@ -26,9 +26,10 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
-  font-family: "Roboto", Condensed;
-  box-sizing: border-box;
-  font: 16px/1.7 Arial, Helvetica, sans-serif; }
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  box-sizing: border-box; }
 
 p {
   margin: 0 0 3px; }
