--- a/public/acs-html/assets/scss/styles.scss
+++ b/public/acs-html/assets/scss/styles.scss
@@ -35,12 +35,10 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
-  font-family: "Roboto", Condensed;
+  font-family: "Roboto Condensed", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
   box-sizing: border-box;
-  font:
-    16px/1.7 Arial,
-    Helvetica,
-    sans-serif;
 }
 p {
   margin: 0 0 3px;
